src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Remaining_Goal__c</fullName>
        <description>Formula Field providing the expected revenue for the campaign minus the expected giving amount.</description>
        <formula>ExpectedRevenue  -  rC_Giving__Expected_Giving_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected revenue for the campaign minus the expected giving amount.</inlineHelpText>
        <label>Remaining Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Response_Mechanism__c</fullName>
        <description>Manually populated field indicating how Campaign response is expected to come in.</description>
        <inlineHelpText>How Campaign response is expected to come in.</inlineHelpText>
        <label>Response Mechanism</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Response_Rate_Hierarchy__c</fullName>
        <description>Gives the number of giving records in the hierarchy divided by the total number sent in the hierarchy</description>
        <formula>IF(AND(rC_Giving__Is_Parent__c), IF(HierarchyNumberSent &gt; 0, HierarchyNumberOfOpportunities / HierarchyNumberSent , 1), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>count of gifts in the hierarchy divided by count of campaign members in the hierarchy</inlineHelpText>
        <label>Actual Response (%) - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Response_Rate__c</fullName>
        <description>Gives the number of giving records associated with the campaign divided by the total number sent from the campaign members</description>
        <formula>IF(NumberSent &gt; 0, NumberOfOpportunities /  NumberSent,0)</formula>
        <inlineHelpText>number of giving records divided by the number soliciatations sent</inlineHelpText>
        <label>Actual Response (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Giving__c</fullName>
        <description>Automatically populated, displays the most recent giving last modified date and time.</description>
        <label>Rollup Giving</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Segment__c</fullName>
        <description>Contains the last 3 digits of the source code</description>
        <inlineHelpText>last 3 auto-generated digits of the source code</inlineHelpText>
        <label>Segment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Send_To_Email_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to sync the campaign and campaign members to Eloqua .</description>
        <inlineHelpText>Check this field to sync the campaign and campaign members to Eloqua .</inlineHelpText>
        <label>Send To Email Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Solicitation_Type__c</fullName>
        <description>Manually populated value reflecting the specific Giving type being solicited.</description>
        <inlineHelpText>Specific Giving type being solicited.</inlineHelpText>
        <label>Solicitation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microdonation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Source_Code_Partial__c</fullName>
        <description>The auto-calculated first 8 characters of the source code.</description>
        <inlineHelpText>The auto-calculated first 8 characters of the source code</inlineHelpText>
        <label>Partial Source Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Source_Code__c</fullName>
        <description>Source Code of Campaign as generated by rules defined in the Source Codes configuration.</description>
        <inlineHelpText>Source Code of Campaign as generated by rules defined in the Source Codes configuration.</inlineHelpText>
        <label>Source Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Start_Date_Time__c</fullName>
        <description>Start Date and Time of Campaign.</description>
        <inlineHelpText>Start Date and Time of Campaign.</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Sub_Affiliation__c</fullName>
        <description>Sub-Affiliation this Campaign represents. This value is only used for extending the source code generation rules to support subsections within the same overall Affiliation.</description>
        <inlineHelpText>Sub-Affiliation this Campaign represents. This value is only used for extending the source code generation rules to support subsections within the same overall Affiliation.</inlineHelpText>
        <label>Sub-Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Sub_Channel__c</fullName>
        <description>Specific way in which the Channel communication will be carried out.</description>
        <inlineHelpText>Specific way in which the Channel communication will be carried out.</inlineHelpText>
        <label>Sub-Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Support_Designation__c</fullName>
        <description>General designation where pledge or funds are to be applied.</description>
        <inlineHelpText>General designation where pledge or funds are to be applied.</inlineHelpText>
        <label>Support Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>rC_Giving__External_ID__c</columns>
        <columns>StayClassy_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <validationRules>
        <fullName>rC_Giving__Effort_Invalid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(TEXT(rC_Giving__Effort__c))), OR(VALUE(TEXT(rC_Giving__Effort__c)) &lt; 0, VALUE(TEXT(rC_Giving__Effort__c)) &gt; 99))</errorConditionFormula>
        <errorDisplayField>rC_Giving__Effort__c</errorDisplayField>
        <errorMessage>Invalid value: Effort</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Giving__Giving_Type_Invalid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(CASE(rC_Giving__Giving_Type__c, &apos;&apos;, 1, &apos;New&apos;, 1, &apos;Additional&apos;, 1, &apos;Upgrade&apos;, 1, &apos;Renewal&apos;, 1, &apos;Rejoin&apos;, 1, NULL)))</errorConditionFormula>
        <errorDisplayField>rC_Giving__Giving_Type__c</errorDisplayField>
        <errorMessage>Invalid picklist value: Giving Type</errorMessage>
    </validationRules>
</CustomObject>